Fix CI - added checkout

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,9 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - name: Get repo files
+              uses: actions/checkout@v4
+
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v4.1.0
               with:
